// Devnet API Protocol Buffers
// This file defines the gRPC service for managing devnets via the daemon.
// Phase 2 of the daemon refactor will expand this with full CRUD + Control operations.

syntax = "proto3";

package devnetbuilder.v1;

option go_package = "github.com/altuslabsxyz/devnet-builder/api/proto/gen/v1;devnetbuilderv1";

// DevnetService provides operations for managing devnets.
// Full implementation coming in Phase 2.
service DevnetService {
  // Placeholder - will be expanded with Create, Get, List, Delete, Start, Stop
}
